src/objects/OpportunityToOrderFieldMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Core: Contains a list of field mappings for sObjects</description>
    <fields>
        <fullName>Destination_Field__c</fullName>
        <description>Core: Field in the target object to be updated by the mapping class. To be entered in the format ObjectAPIName.FieldAPIName</description>
        <label>Destination Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Object__c</fullName>
        <label>Destination Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Object__c</fullName>
        <label>Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OpportunityToOrderFieldMapping</label>
</CustomObject>